--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <li class="footer__item"><a class="footer__link transparency" href="//calendar.yandex.ru">Календарь</a></li>
           <li class="footer__item"><a class="footer__link transparency" href="//travel.yandex.ru">Путешествия</a></li>
         </ul>
-        <p class="footer__copyright">© 2020. Sergey Bezrukov</p>
+        <p class="footer__copyright">© 2020. Sergey Bezrukov.</p>
       </footer>
 
     </div>
