--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       </ul>
     </header>
     <main class="content">
-      <section class="lead content__section content__section_narrow">
+      <section class="lead content__section content__section_padding_narrow">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p> 
         <img src="./images/lead-polka.jpg" alt="Девушка спит в поезде" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p> 
       </section>
-      <section class="intro content__section content__section_narrow">
+      <section class="intro content__section content__section_padding_narrow">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. 
           Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. 
@@ -37,7 +37,7 @@
           <li>Аэропортов <span class="intro__span-digit">241</span></li>
         </ul>
       </section>
-      <section class="photo-grid content__section content__section_wide" aria-label="Список изображений">
+      <section class="photo-grid content__section content__section_padding_wide" aria-label="Список изображений">
         <ul class="photo-grid__list">
           <li class="photo-grid__item"><img src="./images/photo-grid-train.jpg" class="photo-grid__image" alt="окно поезда"></li>
           <li class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__image" alt="горы и облака"></li>
@@ -53,7 +53,7 @@
           <li class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" class="photo-grid__image" alt="горы в тумане"></li>
         </ul>
       </section>
-      <section class="places content__section content__section_narrow" aria-label="Список направлений">
+      <section class="places content__section content__section_padding_narrow" aria-label="Список направлений">
         <article class="place places__item" aria-label="Куршская коса">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -132,7 +132,7 @@
           </div>
         </article>
       </section>
-      <section class="cover content__section content__section_wide">
+      <section class="cover content__section content__section_padding_wide">
         <a href="//stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
