Проверил межстрочный интервал в place_paragraph, он совпадает с макетом. Но была лишняя ширина. Исправл.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <li class="footer__item"><a class="footer__link" href="//travel.yandex.ru">Путешествия</a></li>
         </ul>
       </nav>
-      <p class="footer__copyright">© 2020. Sergey Bezrukov.</p>
+      <p class="footer__copyright">© 2020. Sergey Bezrukov</p>
     </footer>
   </div>
 </body>
